/*
 * Copyright 2020 The Kythe Authors. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package kythe.proto;
option go_package = "kythe.io/kythe/proto/bazel_artifact_selector_go_proto";

import "third_party/bazel/src/main/java/com/google/devtools/build/lib/buildeventstream/proto/build_event_stream.proto";

message BazelAspectArtifactSelectorState {
  // A list of fileset ids which have already been processed or skipped.
  repeated string disposed = 1;
  // Filesets with potentially interesting contents which haven't matched an
  // output group.
  map<string, build_event_stream.NamedSetOfFiles> filesets = 2;
  // Fileset ids which have been requested, but not yet seen the stream.
  // Mapped to a target label whose filters otherwise matched.
  map<string, string> pending = 3;
}
